# aiducator

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
accounts/: access.py  admin.py  context_processors.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ai_engine/: admin.py  course_generation.py  fields.py  models.py  rate_limit.py  schemas.py  security.py  tasks.py  tests.py
ai_engine/migrations/: 0001_initial.py  0002_aijob_generation_request.py  0003_alter_aijob_job_type.py  0004_coursegenerationrequest_assessment_types.py
ai_engine/providers/: __init__.py  base.py  factory.py  fake.py  openai.py
analytics/: admin.py  models.py  security.py  services.py  tests.py  urls.py  views.py
assessments/: access.py  admin.py  forms.py  models.py  sandbox.py  services.py  tests.py  urls.py  views.py
config/: ai_provider.py  celery.py  settings.py  urls.py
courses/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
dashboard/: tests.py  urls.py  views.py
docs/: content-safety.md  gamification-analytics.md  phase-1-specification.md  phase-2-implementation.md  phase-3-implementation.md  phase-4-course-generation.md
enrollments/: admin.py  models.py  services.py
gamification/: admin.py  models.py  services.py  tests.py
notifications/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
organizations/: admin.py  models.py
teacher_courses/: urls.py
templates/: base.html
(+74 files in other folders)
